// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkFormValidation should render correctly 1`] = `
<div
  onTransitionEnd={[Function]}
  style={
    Object {
      "MozTransition": "height 200ms ease ",
      "OTransition": "height 200ms ease ",
      "WebkitTransition": "height 200ms ease ",
      "height": "auto",
      "msTransition": "height 200ms ease ",
      "overflow": "visible",
      "transition": "height 200ms ease ",
    }
  }
>
  <div>
    <div
      className="bpk-form-validation__container"
    >
      <div
        className="bpk-form-validation bpk-form-validation--appear"
        id="my-form-validation"
      >
        <span
          style={
            Object {
              "display": "inline-block",
              "lineHeight": "1.125rem",
              "marginTop": "0.1875rem",
              "verticalAlign": "top",
            }
          }
        >
          <svg
            className="bpk-form-validation__icon"
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 22c5.5 0 10-4.5 10-10S17.5 2 12 2 2 6.5 2 12s4.5 10 10 10zM10.5 5.9c0-.5.4-.9.9-.9h1.1c.5 0 .9.4.9.9V13c0 .5-.4.9-.9.9h-1.1c-.5 0-.9-.4-.9-.9V5.9zm0 11.1c0-.5.5-1 1-1h1c.5 0 1 .5 1 1v1c0 .5-.5 1-1 1h-1c-.5 0-1-.5-1-1v-1z"
            />
          </svg>
        </span>
        A validation message.
      </div>
    </div>
  </div>
</div>
`;

exports[`BpkFormValidation should render correctly with "expanded" equal to false 1`] = `
<div
  onTransitionEnd={[Function]}
  style={
    Object {
      "MozTransition": "height 200ms ease ",
      "OTransition": "height 200ms ease ",
      "WebkitTransition": "height 200ms ease ",
      "height": 0,
      "msTransition": "height 200ms ease ",
      "overflow": "visible",
      "transition": "height 200ms ease ",
    }
  }
>
  <div>
    <div
      className="bpk-form-validation__container"
    >
      <div
        className="bpk-form-validation"
        id="my-form-validation"
      >
        <span
          style={
            Object {
              "display": "inline-block",
              "lineHeight": "1.125rem",
              "marginTop": "0.1875rem",
              "verticalAlign": "top",
            }
          }
        >
          <svg
            className="bpk-form-validation__icon"
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 22c5.5 0 10-4.5 10-10S17.5 2 12 2 2 6.5 2 12s4.5 10 10 10zM10.5 5.9c0-.5.4-.9.9-.9h1.1c.5 0 .9.4.9.9V13c0 .5-.4.9-.9.9h-1.1c-.5 0-.9-.4-.9-.9V5.9zm0 11.1c0-.5.5-1 1-1h1c.5 0 1 .5 1 1v1c0 .5-.5 1-1 1h-1c-.5 0-1-.5-1-1v-1z"
            />
          </svg>
        </span>
        A validation message.
      </div>
    </div>
  </div>
</div>
`;
